# prism

./: .ci-trigger  .coveragerc  .devonboarding-registry.yaml  .gitignore  .pre-commit-config.yaml  CI_CD_SUMMARY.md  CLI_WEB_UI_PARITY.md  COMMIT_SUMMARY.txt  CONTRIBUTING.md  DASHBOARD_COMMANDS.md  Dockerfile.test  FINAL_SUMMARY.txt  INHERITANCE_DEMO.md  LICENSE  Makefile  OPEN_SOURCE_READY.md  PACKAGE_CATALOG.md  PROJECT_COMPLETE.md  README.md  TRANSFORMATION_COMPLETE.md  conftest.py  docker-compose.test.yml  install-gh.sh  install-ui.py  install.py  install.py.backup  install_full.py  installer_engine.py  push_to_github.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_playwright_report.sh  run_playwright_ui.sh  run_tests.sh  start_web_ui.sh
.git-backup/: COMMIT_EDITMSG  index
.github/: BRANCH_PROTECTION.md  CI_CD.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SETUP_COMPLETE.md  setup-cicd.sh
.reports/: README.md  architecture-vbd-plan.md  audit-code-docs.md  docs-restructure-plan.md  harmonic-design-plan.md  i18n-plan.md  roadmap.md  ux-decomposition.md  whitepaper-prism-ux.md
bad-config-examples/: README.md  bad-company-no-name.yaml  bad-git-url.yaml  bad-proxy.yaml  bad-types.yaml  empty.yaml
config/: inheritance.yaml  resources.yaml  tools.yaml  user-profile.yaml  welcome.yaml
docs/: CONFIG_INHERITANCE.md  CUSTOM_REGISTRY.md  Gemfile  NPM_PACKAGES.md  PACKAGE_SYSTEM.md  PLAYWRIGHT_DASHBOARDS.md  README.md  TESTING.md  _config.yml  about.md  index.md
locales/: README.md
prism/: __init__.py  container.py
scripts/: auto-deploy-docs.py  (+10 more)
(+379 files in other folders)
