[build-system]
requires = ["setuptools>=68.0.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-dx"
dynamic = ["version"]
description = "Developer onboarding tool — refract complexity into clarity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "William Anderson"},
]
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "PyYAML>=6.0.1",
    "GitPython>=3.1.40",
    "watchdog>=3.0.0",
    "mkdocs-material>=9.5.3",
    "pymdown-extensions>=10.7",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "requests>=2.31.0",
    "flask>=3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/andersonwilliam85/prism"
Issues = "https://github.com/andersonwilliam85/prism/issues"

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.setuptools_scm]
version_file = "prism/_version.py"
fallback_version = "0.0.0.dev0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
